syntax = "proto3";

package go_messenger;

import "accounts/accounts.proto";

option go_package = "pkg/api/accounts";

service AccountsService {
  rpc Register(RegisterRequest) returns (UserRegisterResponse) {}
  rpc Login(LoginRequest) returns (UserLoginResponse) {}
  rpc CreateUser(CreateUserRequest) returns (UserProfile) {}
  rpc GetUser(GetUserRequest) returns (UserProfile) {}
  rpc GetProfile(GetProfileRequest) returns (UserProfile) {}
  rpc UpdateProfile(UpdateProfileRequest) returns (UpdateProfileResponse) {}
  rpc DeleteProfile(DeleteProfileRequest) returns (DeleteProfileResponse) {}
}
